# QUACK

./: .gitignore  CHANGES.md  CLAUDE.md  README.md  batch_results.json  pyproject.toml
configs/: config.yaml  default_game.yaml
configs/experiment/: heterogeneous.yaml  homogeneous.yaml
configs/game/: default.yaml
configs/maps/: simple_ship.yaml
configs/model/: claude_opus4.6.yaml  gemini3.1pro.yaml  gpt5.2.yaml  gpt5.4.yaml  grok4.yaml  kimi2.5.yaml
ggd_ai/: __init__.py
ggd_ai/agents/: memory.py  prompt_builder.py  vlm_agent.py
ggd_ai/engine/: event_bus.py  game_engine.py  game_state.py
ggd_ai/map/: game_map.py  pathfinding.py
ggd_ai/rendering/: colors.py  map_renderer.py  room_decor.py  sprites.py
ggd_ai/roles/: base_role.py  duck.py  goose.py
ggd_ai/systems/: kill.py  meeting.py  task.py  vision.py  voting.py
ggd_ai/utils/: logger.py
quack/: __init__.py
quack/agents/: base_agent.py  memory.py  prompt_builder.py  vlm_agent.py
quack/engine/: event_bus.py  game_engine.py
quack/evaluation/: __init__.py  evaluator.py  game_reconstructor.py  log_parser.py  report.py  tier1_game_metrics.py  tier2_behavioral.py  tier3_statement_verification.py
quack/map/: pathfinding.py
quack/rendering/: map_renderer.py
quack/roles/: base_role.py  duck.py  goose.py
quack/systems/: kill.py  meeting.py  task.py  vision.py  voting.py
scripts/: batch_full_experiment.sh  batch_heterogeneous.sh  batch_homogeneous.sh  evaluate_batch.py  evaluate_game.py  generate_videos.sh  replay_game.py  run_game.py  test_chinese_font.py  validate_tier3_audit.py
(+8 files in other folders)
